// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconMailAlert /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M284 62h-76v10h76V62zm-12 32h-64v10h64V94zm-15 32h-50v9h50v-9zm-12 33h-38v10h38v-10zm-14 32h-23v10h23v-10zm-28-99.4V201H24V91c1.4 1.1 89.5 65.6 89.5 65.6l89.5-65zM24 75.8V62h179v15.1l-89.5 63.6c-37.9-26-77.8-55.5-89.5-64.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconMailAlert /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M284 62h-76v10h76V62zm-12 32h-64v10h64V94zm-15 32h-50v9h50v-9zm-12 33h-38v10h38v-10zm-14 32h-23v10h23v-10zm-28-99.4V201H24V91c1.4 1.1 89.5 65.6 89.5 65.6l89.5-65zM24 75.8V62h179v15.1l-89.5 63.6c-37.9-26-77.8-55.5-89.5-64.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconMailAlert /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M284 62h-76v10h76V62zm-12 32h-64v10h64V94zm-15 32h-50v9h50v-9zm-12 33h-38v10h38v-10zm-14 32h-23v10h23v-10zm-28-99.4V201H24V91c1.4 1.1 89.5 65.6 89.5 65.6l89.5-65zM24 75.8V62h179v15.1l-89.5 63.6c-37.9-26-77.8-55.5-89.5-64.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconMailAlert /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M284 62h-76v10h76V62zm-12 32h-64v10h64V94zm-15 32h-50v9h50v-9zm-12 33h-38v10h38v-10zm-14 32h-23v10h23v-10zm-28-99.4V201H24V91c1.4 1.1 89.5 65.6 89.5 65.6l89.5-65zM24 75.8V62h179v15.1l-89.5 63.6c-37.9-26-77.8-55.5-89.5-64.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconMailAlert /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M284 62h-76v10h76V62zm-12 32h-64v10h64V94zm-15 32h-50v9h50v-9zm-12 33h-38v10h38v-10zm-14 32h-23v10h23v-10zm-28-99.4V201H24V91c1.4 1.1 89.5 65.6 89.5 65.6l89.5-65zM24 75.8V62h179v15.1l-89.5 63.6c-37.9-26-77.8-55.5-89.5-64.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconMailAlert /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M284 62h-76v10h76V62zm-12 32h-64v10h64V94zm-15 32h-50v9h50v-9zm-12 33h-38v10h38v-10zm-14 32h-23v10h23v-10zm-28-99.4V201H24V91c1.4 1.1 89.5 65.6 89.5 65.6l89.5-65zM24 75.8V62h179v15.1l-89.5 63.6c-37.9-26-77.8-55.5-89.5-64.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconMailAlert /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M284 62h-76v10h76V62zm-12 32h-64v10h64V94zm-15 32h-50v9h50v-9zm-12 33h-38v10h38v-10zm-14 32h-23v10h23v-10zm-28-99.4V201H24V91c1.4 1.1 89.5 65.6 89.5 65.6l89.5-65zM24 75.8V62h179v15.1l-89.5 63.6c-37.9-26-77.8-55.5-89.5-64.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconMailAlert /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M284 62h-76v10h76V62zm-12 32h-64v10h64V94zm-15 32h-50v9h50v-9zm-12 33h-38v10h38v-10zm-14 32h-23v10h23v-10zm-28-99.4V201H24V91c1.4 1.1 89.5 65.6 89.5 65.6l89.5-65zM24 75.8V62h179v15.1l-89.5 63.6c-37.9-26-77.8-55.5-89.5-64.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconMailAlert /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M284 62h-76v10h76V62zm-12 32h-64v10h64V94zm-15 32h-50v9h50v-9zm-12 33h-38v10h38v-10zm-14 32h-23v10h23v-10zm-28-99.4V201H24V91c1.4 1.1 89.5 65.6 89.5 65.6l89.5-65zM24 75.8V62h179v15.1l-89.5 63.6c-37.9-26-77.8-55.5-89.5-64.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconMailAlert /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M284 62h-76v10h76V62zm-12 32h-64v10h64V94zm-15 32h-50v9h50v-9zm-12 33h-38v10h38v-10zm-14 32h-23v10h23v-10zm-28-99.4V201H24V91c1.4 1.1 89.5 65.6 89.5 65.6l89.5-65zM24 75.8V62h179v15.1l-89.5 63.6c-37.9-26-77.8-55.5-89.5-64.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconMailAlert /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M284 62h-76v10h76V62zm-12 32h-64v10h64V94zm-15 32h-50v9h50v-9zm-12 33h-38v10h38v-10zm-14 32h-23v10h23v-10zm-28-99.4V201H24V91c1.4 1.1 89.5 65.6 89.5 65.6l89.5-65zM24 75.8V62h179v15.1l-89.5 63.6c-37.9-26-77.8-55.5-89.5-64.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconMailAlert /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 306 256"
    width="1.1953125em"
  >
      
    <path
      d="M284 62h-76v10h76V62zm-12 32h-64v10h64V94zm-15 32h-50v9h50v-9zm-12 33h-38v10h38v-10zm-14 32h-23v10h23v-10zm-28-99.4V201H24V91c1.4 1.1 89.5 65.6 89.5 65.6l89.5-65zM24 75.8V62h179v15.1l-89.5 63.6c-37.9-26-77.8-55.5-89.5-64.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
